--- a/css/strongpay.css
+++ b/css/strongpay.css
@@ -16,10 +16,10 @@ a.nav-link.active {
 
 div.col.text-center {
   display:auto ;
-  width: 300px;
-  height: 190px;
+  width: 300px!important;
+  height: 190px!important;
     background: url(https://raw.githubusercontent.com/stronghands-official/assets/main/strongpay-home-logo.svg)no-repeat center!important;
-  background-size: 300px 82px;
+  background-size: 200px 82px!important;
 }
 
 h1.h2.mb-3 {
