--- a/css/strongpay-checkout.css
+++ b/css/strongpay-checkout.css
@@ -139,6 +139,9 @@ canvas {
 background-color: #f60!important;
     border-color: #fc0!important;
 }
+.powered__by__btcpayserver {
+display:none!important;
+}
 .recommended-fee {
     color: #fff;
 }
