--- a/css/strongpay-checkout.css
+++ b/css/strongpay-checkout.css
@@ -142,6 +142,9 @@ background-color: #ffa200!important;
 .payment-tabs__slider {
 background:#ffa200!important;
 }
+.separatorGem {
+background:#ffa200!important
+}
 .powered__by__btcpayserver {
 display:none!important;
 }
