--- a/css/strongpay-checkout.css
+++ b/css/strongpay-checkout.css
@@ -134,9 +134,11 @@ canvas {
     background-color: #ffa200!important;
     border-color: #ffa200!important;
     }
+/* 
 .header__icon {
     margin-left:25%!important;
-}
+} 
+*/
 .timer-row {
 background-color: #ffa200!important;
     border-color: #ffa200!important;
